[project]
name = "nucleoid-detection"
version = "0.1.0"
description = "Nucleoid detection and replication kinetics analysis for STED microscopy images"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "h5py>=3.12.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "tifffile>=2026.3.3",
    "streamlit>=1.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
